@@ -1,5 +1,12 @@
 2022-03-28 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
+	* support/regression/ports/tlcs90/spec.mk:
+	  Do not meit debug info to ease reading asm files.
+	* src/z80/ralloc2.cc:
+	  Fix code generation issues in use of iy.
+
+2022-03-28 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
 	* src/z80/gen.c:
 	  Fix bug #3373.
 
